syntax = "proto3";
package key;





/*
CreateCollectorKey请求
*/
message CreateCollectorKeyRequest {
message Parent {
    /*
    唯一名称
    */
    string name = 1 ;
}
        
message TagDefine {
    /*
    名字
    */
    string name = 1 ;
    /*
    默认值
    */
    string default = 2 ;
    /*
    是否只读
    */
    bool readOnly = 3 ;
}
        
message ParamDefine {
    /*
    名字
    */
    string name = 1 ;
    /*
    值类型
    */
    string valueType = 2 ;
    /*
    默认值
    */
    string default = 3 ;
    /*
    是否只读
    */
    bool readOnly = 4 ;
}
        
    
    /*
    父Key
    */
    Parent parent = 1 ;
    /*
    key值
    */
    string key = 2 ;
    /*
    key名
    */
    string keyName = 3 ;
    /*
    标签
    */
    repeated string labels = 4 ;
    /*
    类型
    */
    string metricType = 5 ;
    /*
    数据类型
    */
    string dataType = 6 ;
    /*
    所属Agent
    */
    string agentType = 7 ;
    /*
    维度定义
    */
    repeated TagDefine tagDefine = 8 ;
    /*
    参数定义
    */
    repeated ParamDefine paramDefine = 9 ;
    /*
    帮助
    */
    string help = 10 ;
    /*
    单位
    */
    string unit = 11 ;
}

/*
CreateCollectorKey返回
*/
message CreateCollectorKeyResponse {
    /*
    指标id
    */
    string keyId = 1 ;
}

/*
CreateCollectorKeyApi返回
*/
message CreateCollectorKeyResponseWrapper {
    /*
    返回码
    */
    int32 code = 1 ;
    /*
    返回码解释
    */
    string codeExplain = 2 ;
    /*
    错误详情
    */
    string error = 3 ;
    /*
    返回数据
    */
    key.CreateCollectorKeyResponse data = 4 ;
}

